--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
   <!-- Include example userlist script / CSS.
        Can be downloaded from: https://github.com/firebase/firepad/tree/master/examples/ -->
-  <script src="./js/firepad-userlist.js"></script>
+  <script src="./scripts/firepad-userlist.js"></script>
   <link rel="stylesheet" href="./css/firepad-userlist.css" />
 
-  <script src="./js/EyeWrite.js" type="text/javascript"></script>
+  <script src="./scripts/EyeWrite.js" type="text/javascript"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
 
 
