--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/codemirror.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/codemirror.css" />
 
-  <!-- Firepad -->
+  <!-- Firepad (full not min)-->
   <link rel="stylesheet" href="https://firepad.io/releases/v1.5.9/firepad.css" />
-  <script src="https://firepad.io/releases/v1.5.9/firepad.min.js"></script>
+  <script src="https://firepad.io/releases/v1.5.9/firepad.js"></script>
+  <script src="./scripts/mouse.js" type="text/javascript"></script>
 
   <!-- Include example userlist script / CSS.
        Can be downloaded from: https://github.com/firebase/firepad/tree/master/examples/ -->
