--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
   <!-- Firepad (full not min)-->
   <link rel="stylesheet" href="https://firepad.io/releases/v1.5.9/firepad.css" />
-  <script src="https://firepad.io/releases/v1.5.9/firepad.js"></script>
-  <script src="./scripts/mouse.js" type="text/javascript"></script>
+  <script src="https://firepad.io/releases/v1.5.10/firepad.js" type="text/javascript"></script>
 
   <!-- Include example userlist script / CSS.
        Can be downloaded from: https://github.com/firebase/firepad/tree/master/examples/ -->
@@ -22,6 +21,9 @@
 
   <script src="./scripts/EyeWrite.js" type="text/javascript"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  
+  <script src="./scripts/mouseMove.js" type="text/javascript"></script>
 
 
   <style>
@@ -101,13 +103,13 @@
       firebase.initializeApp(config);
 
       //// Get Firebase Database reference.
-      var firepadRef = getExampleRef();
+      window.firepadRef = getExampleRef();
 
       //// Create CodeMirror (with lineWrapping on).
       var codeMirror = CodeMirror(document.getElementById('firepad'), { lineWrapping: true });
 
       // Create a random ID to use as our user ID (we must give this to firepad and FirepadUserList).
-      var userId = Math.floor(Math.random() * 9999999999).toString();
+      window.userId = Math.floor(Math.random() * 9999999999).toString();
 
       //// Create Firepad (with rich text features and our desired userId).
       var firepad = Firepad.fromCodeMirror(firepadRef, codeMirror,
@@ -153,16 +155,19 @@
       return ref;
     }
   </script>
+  
 </body>
 
+
+
 <script>
-  var gazeOn = false;
-  window.gazeSharing = false;
+  window.gazeOn = false;
+  gazeSharing = false;
   var button = document.getElementById('toggleButton');
   changeGaze();
   function changeGaze() {
-    gazeOn = !gazeOn;
-    window.gazeSharing = gazeOn;
+    window.gazeOn = !window.gazeOn;
+    gazeSharing = gazeOn;
     if (gazeOn) {
       button.innerHTML = "Hide Gaze (ESC)";
       button.style.backgroundColor = "#AF3131";
