--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script src="./scripts/EyeWrite.js" type="text/javascript"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  
+
   <script src="./scripts/mouseMove.js" type="text/javascript"></script>
 
 
@@ -96,18 +96,18 @@
       //// Initialize Firebase.
       //// TODO: replace with your Firebase project configuration.
       // Your web app's Firebase configuration
-      var config = {
-        apiKey: "AIzaSyA2OzRoGJAloJ9NdYewDl4egs_FSlpOkd8",
-        authDomain: "eyewrite-ab60c.firebaseapp.com",
-        databaseURL: "https://eyewrite-ab60c.firebaseio.com",
-        projectId: "eyewrite-ab60c",
-        storageBucket: "eyewrite-ab60c.appspot.com",
-        // messagingSenderId: "544252935680",
-        appId: "1:544252935680:web:a0e398f2ad80910da962e5",
-        measurementId: "G-BFQHBGPXPS"
+      var firebaseConfig = {
+        apiKey: "AIzaSyBqy0PMzUcdYTh-MaKCXCR1GZGQrhlUs2s",
+        authDomain: "neweyewrite.firebaseapp.com",
+        databaseURL: "https://neweyewrite.firebaseio.com",
+        projectId: "neweyewrite",
+        storageBucket: "neweyewrite.appspot.com",
+        messagingSenderId: "555020691162",
+        appId: "1:555020691162:web:62d17e309001bca73a27e3",
+        measurementId: "G-5NDK60WNMF"
       };
       // Initialize Firebase
-      firebase.initializeApp(config);
+      firebase.initializeApp(firebaseConfig);
       firebase.analytics();
 
       //// Get Firebase Database reference.
@@ -173,7 +173,7 @@
     // }
 
   </script>
-  
+
 </body>
 
 
