--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
   <meta charset="utf-8" />
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.6.2/firebase-database.js"></script>
+
   <!-- CodeMirror -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/codemirror.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.17.0/codemirror.css" />
 
-  <!-- Firepad (full not min)-->
+  <!-- Firepad -->
   <link rel="stylesheet" href="https://firepad.io/releases/v1.5.10/firepad.css" />
-  <script src="https://firepad.io/releases/v1.5.10/firepad.js" type="text/javascript"></script>
+  <script src="./firepadFreeSpace.js"></script>
 
   <!-- Include example userlist script / CSS.
        Can be downloaded from: https://github.com/firebase/firepad/tree/master/examples/ -->
   <script src="./scripts/firepad-userlist.js"></script>
   <link rel="stylesheet" href="./css/firepad-userlist.css" />
 
-  <script src="./scripts/EyeWrite.js" type="text/javascript"></script>
   <script type="text/javascript" src="http://code.jquery.com/jquery.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-
-  <script src="./scripts/mouseMove.js" type="text/javascript"></script>
 
 
   <style>
@@ -79,6 +79,22 @@
       width: 175px;
       z-index: 10;
     }
+
+    #backdrop {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      pointer-events: none;
+      z-index: -3;
+      background-color: #20438f;
+    }
+
+    #canvas {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      pointer-events: none;
+    }
   </style>
 </head>
 
@@ -88,8 +104,8 @@
   <div id="toggleView">
     <button onclick="changeGaze()" id="toggleButton">Show Gaze</button>
   </div>
-
-  <!-- <script type="text/javascript" src="/bundle.js"></script> -->
+  <canvas id="canvas"></canvas>
+  <canvas id="backdrop"></canvas>
 
   <script>
     function init() {
@@ -120,31 +136,15 @@
       window.userId = Math.floor(Math.random() * 9999999999).toString();
 
       //// Create Firepad (with rich text features and our desired userId).
-      var firepad = Firepad.fromCodeMirror(firepadRef, codeMirror,
+      window.firepad = Firepad.fromCodeMirror(firepadRef, codeMirror,
         { richTextToolbar: true, richTextShortcuts: true, userId: userId });
 
       //// Create FirepadUserList (with our desired userId).
       var firepadUserList = FirepadUserList.fromDiv(firepadRef.child('users'),
         document.getElementById('userlist'), userId);
 
-      //// Track mouse position, remove when user disconnects
-      window.mousePosRef = window.firepadRef.child('users').child(window.userId).child('mousePosition');
-      window.mousePosRef.onDisconnect().remove();
-
-      // var setCursorAtEnd = function () {
-      //   codeMirror.setCursor({
-      //     'line': codeMirror.lineCount(),
-      //     'ch': 0,
-      //   });
-      // };
-
-      // var insertText = function (text) {
-      //   var cursor = codeMirror.getCursor();
-      //   codeMirror.replaceRange(text, cursor);
-      // }
-
       //// Initialize contents.
-      firepad.on('ready', function () {
+      window.firepad.on('ready', function () {
         if (firepad.isHistoryEmpty()) {
           firepad.setText('Welcome to EyeWrite');
         }
@@ -166,14 +166,7 @@
       }
       return ref;
     }
-
-    // window.onbeforeunload = async function() {
-    //   await window.firepadRef.child('users').child(window.userId).remove();
-    //   console.log('done');
-    // }
-
   </script>
-
 </body>
 
 
@@ -186,12 +179,15 @@
   function changeGaze() {
     window.gazeOn = !window.gazeOn;
     gazeSharing = gazeOn;
+    let canvas = document.getElementById("canvas");
     if (gazeOn) {
       button.innerHTML = "Hide Gaze (ESC)";
       button.style.backgroundColor = "#AF3131";
+      canvas.style.zIndex = "0";
     } else {
       button.innerHTML = "Show Gaze (ESC)";
       button.style.backgroundColor = "#3BA057";
+      canvas.style.zIndex = "-5";
     }
   }
 </script>
@@ -204,5 +200,4 @@
     }
   });
 </script>
-
 </html>
