--- a/index.html
+++ b/index.html
@@ -150,26 +150,20 @@
         }
       });
 
-
+      var canvas = document.getElementById('canvas');
+      var ctx = canvas.getContext("2d");
 
       firepadRef.child('users').on('value', function (snapshot) {
-        let canvas = document.getElementById('canvas');
-        let ctx = canvas.getContext("2d");
+
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
         snapshot.forEach(function (childSnapshot) {
 
           let mouse = childSnapshot.child('mouse').val();
           let color = childSnapshot.child('color').val();
           if (mouse && color) {
-            let mouseX = mouse['x'];
-            let mouseY = mouse['y'];
-
-            
-
             ctx.fillStyle = color;
-            ctx.clearRect(0, 0, canvas.width, canvas.height);
-            ctx.fillRect(mouseX - 5, mouseY - 5, 10, 10);
+            ctx.fillRect(mouse['x'] - 5, mouse['y'] - 5, 10, 10);
           }
-
 
         });
       });
