--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
   <script src="./scripts/firepad-userlist.js"></script>
   <link rel="stylesheet" href="./css/firepad-userlist.css" />
 
+  <!-- Include Twitter Bootstrap and jQuery: -->
+  <link rel="stylesheet" href="./bootstrap-multiselect/docs/css/bootstrap-3.3.2.min.css" type="text/css" />
+  <script type="text/javascript" src="./bootstrap-multiselect/docs/js/jquery-2.1.3.min.js"></script>
+  <script type="text/javascript" src="./bootstrap-multiselect/docs/js/bootstrap-3.3.2.min.js"></script>
+
+  <!-- Include the plugin's CSS and JS: -->
+  <script type="text/javascript" src="./bootstrap-multiselect/dist/js/bootstrap-multiselect.js"></script>
+  <link rel="stylesheet" href="./bootstrap-multiselect/dist/css/bootstrap-multiselect.css" type="text/css" />
+
   <style>
     html {
       height: 100%;
@@ -52,28 +61,12 @@
       height: auto;
     }
 
-    #toggleButton {
-      margin: 10%;
-      background-color: #3BA057;
-      padding: 14px 14px;
-      font-size: 13px;
-      cursor: pointer;
-      width: 80%;
-      height: 80%;
-      border: none;
-      border-radius: 5px;
-      color: #ffffff;
-      outline: none;
-    }
-
-    #toggleView {
-      position: absolute;
-      left: 0;
-      top: 425px;
-      bottom: 0;
-      height: 50px;
-      width: 175px;
-      z-index: 5;
+    .dropdown-button {
+      position: relative;
+      margin-top: 0px;
+      float: right;
+      right: 27px;
+      top: 27px;
     }
 
     .highlight {
@@ -85,9 +78,7 @@
 <body>
   <div id="userlist"></div>
   <div id="firepad"></div>
-  <div id="toggleView">
-    <button onclick="changeGaze()" id="toggleButton">Show Gaze</button>
-  </div>
+  <select id="user-checkboxes" multiple="multiple"></select>
 
   <script>
     //// Initialize Firebase.
@@ -111,15 +102,16 @@
     var firebaseRef = getExampleRef();
 
     //// Create CodeMirror (with lineWrapping on).
-    var codeMirror = CodeMirror(document.getElementById('firepad'), { lineWrapping: true, 
-      inputStyle: 'contenteditable', 
-      historyEventDelay: 2500, 
-      autofocus: true, 
-      workTime: 5, 
-      workDelay: 5, 
-      pollInterval: 5, 
-      viewportMargin: 0, 
-      styleSelectedText: true });
+    var codeMirror = CodeMirror(document.getElementById('firepad'), {
+      lineWrapping: true,
+      inputStyle: 'contenteditable',
+      historyEventDelay: 2500,
+      autofocus: true,
+      workTime: 5,
+      workDelay: 5,
+      pollInterval: 5,
+      viewportMargin: 0
+    });
 
     // Create a random ID to use as our user ID (we must give this to firepad and FirepadUserList).
     var userId = Math.floor(Math.random() * 9999999999).toString();
@@ -131,6 +123,9 @@
     //// Create FirepadUserList (with our desired userId).
     var firepadUserList = FirepadUserList.fromDiv(firebaseRef.child('users'),
       document.getElementById('userlist'), userId);
+
+    var logo = document.getElementsByClassName('powered-by-firepad')[0];
+    logo.parentNode.removeChild(logo);
 
 
     // Helper to get hash from end of URL or generate a random one.
@@ -145,10 +140,11 @@
       }
       return ref;
     }
-
   </script>
-  <!-- Mouse Visualization Script -->
-  <script src="./scripts/mouseVis.js"></script>
+
 </body>
+
+<!-- Mouse Visualization Script -->
+<script src="./scripts/mouseVis.js"></script>
 
 </html>
