--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
       width: 175px;
     }
 
+    .userlist-box {
+      height: 200px;
+      border-radius: 4px;
+    }
+
     #firepad {
       position: absolute;
       left: 175px;
@@ -74,7 +79,7 @@
       float: left;
       margin-left: 10px;
     }
-    
+
     .colorpicker-button-position {
       position: absolute;
       float: left;
@@ -94,7 +99,7 @@
       background-color: #E6E6E6;
     }
 
-    .triangle-up {
+    .arrow-up {
       width: 0;
       height: 0;
       border-left: 15px solid transparent;
@@ -102,7 +107,7 @@
       border-bottom: 15px solid #FFFFFF;
     }
 
-    .triangle-down {
+    .arrow-down {
       width: 0;
       height: 0;
       border-left: 15px solid transparent;
@@ -110,7 +115,7 @@
       border-top: 15px solid #FFFFFF;
     }
 
-    .line {
+    .arrow-stem {
       width: 10px;
       height: 15px;
       background: #FFFFFF;
