--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
   <script src='./scripts/firepad-userlist.js'></script>
   <link rel='stylesheet' href='./css/firepad-userlist.css' />
 
+  <!-- WebGazer -->
+  <script type='text/javascript' src='./node_modules/webgazer/www/webgazer.js'></script>
+
   <!-- Include Twitter Bootstrap and jQuery: -->
   <link rel='stylesheet' href='./node_modules/bootstrap-multiselect/docs/css/bootstrap-3.3.2.min.css' type='text/css' />
   <script type='text/javascript' src='./node_modules/bootstrap-multiselect/docs/js/jquery-2.1.3.min.js'></script>
@@ -121,6 +124,12 @@
       background: #FFFFFF;
       margin-left: 10px;
     }
+
+    .radio-buttons{
+      position: relative;
+      top: 400px;
+      left: 20px;
+    }
   </style>
 </head>
 
@@ -130,6 +139,14 @@
   <div id='user-checkboxes-container' class='user-checkboxes-container-position'></div>
   <select id='user-checkboxes' multiple='multiple'></select>
   <div id='colorpicker' class='colorpicker-button-position'></div>
+  
+  <div class="radio-buttons">
+    <input type="radio" id="mouseRadio" name="visualizationChoice" value="mouse">
+    <label for="mouse">Mouse</label>
+
+    <input type="radio" id="gazeRadio" name="visualizationChoice" value="gaze" checked>
+    <label for="gaze">Gaze</label>
+  </div>
 
   <script>
     var firebaseConfig = {
