UI and adjustments

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 
 <body>
   <p>Welcome to EyeWrite!</p>
+
+  <br>
+  <br>
+  <A href="./node_modules/webgazer/www/calibration.html">Calibrate!</A>
+  <br>
+  <br>
+
+
   <A HREF="./eyewrite.html">Create New Pad</A>
   <br>
   <br>
