--- a/eyewrite.html
+++ b/eyewrite.html
@@ -125,29 +125,26 @@
       margin-left: 10px;
     }
 
-    .radio-buttons {
+    .mouse-gaze-buttons {
       position: relative;
       top: 400px;
       left: 20px;
     }
 
+    .transmit-toggle-buttons {
+      position: relative;
+      top: 300px;
+      left: 20px;
+      width: 100px;
+    }
+
     .slider-container {
       position: relative;
-      top: 500px;
+      top: 400px;
       left: 30px;
       width: 130px;
     }
 
-    /* .slider {
-      -webkit-appearance: none;
-      width: 100%;
-      height: 25px;
-      background: #d3d3d3;
-      outline: none;
-      opacity: 0.7;
-      -webkit-transition: .2s;
-      transition: opacity .2s;
-    } */
   </style>
 </head>
 
@@ -158,12 +155,20 @@
   <select id='user-checkboxes' multiple='multiple'></select>
   <div id='colorpicker' class='colorpicker-button-position'></div>
 
-  <div class="radio-buttons">
+  <div class="mouse-gaze-buttons">
     <input type="radio" id="mouseRadio" name="visualizationChoice" value="mouse">
     <label for="mouse">Mouse</label>
 
     <input type="radio" id="gazeRadio" name="visualizationChoice" value="gaze" checked>
     <label for="gaze">Gaze</label>
+  </div>
+
+  <div class="transmit-toggle-buttons">
+    <input type="radio" id="transmit" name="transmitChoice" value="yes" checked>
+    <label for="yes">Send Data</label>
+
+    <input type="radio" id="noTransmit" name="transmitChoice" value="no">
+    <label for="no">Block Data</label>
   </div>
 
   <div class="slider-container">
